Adding Feign Clients and starting coding for DTO.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=thomaspereirasellerapi
+url.opencep.api=https://opencep.com/v1/
+url.cielo.zeroauth.api=https://apisandbox.cieloecommerce.cielo.com.br/1/zeroauth/
+cielo.merchant.api.key=c77aad9f-43c5-4896-9b3e-ebd23ed09e5b
+cielo.merchant.api.id=YPWRRSJVGGSFTGDCLBJCNZGSTENLNCFAPCIHRRJF
