--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <version>3.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
