--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ url.opencep.api=https://opencep.com/v1/
 url.cielo.zeroauth.api=https://apisandbox.cieloecommerce.cielo.com.br/1/zeroauth/
 cielo.merchant.api.key=c77aad9f-43c5-4896-9b3e-ebd23ed09e5b
 cielo.merchant.api.id=YPWRRSJVGGSFTGDCLBJCNZGSTENLNCFAPCIHRRJF
+spring.datasource.url=jdbc:h2:~/databaseThomasPereira
+spring.jpa.database-plataform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.show-sql=true
