Working on services and controller.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 spring.application.name=thomaspereirasellerapi
+
 url.opencep.api=https://opencep.com/v1/
 url.cielo.zeroauth.api=https://apisandbox.cieloecommerce.cielo.com.br/1/zeroauth/
+viacep.url=https://viacep.com.br/ws
 cielo.merchant.api.key=c77aad9f-43c5-4896-9b3e-ebd23ed09e5b
 cielo.merchant.api.id=YPWRRSJVGGSFTGDCLBJCNZGSTENLNCFAPCIHRRJF
-spring.datasource.url=jdbc:h2:~/databaseThomasPereira
+
+spring.datasource.url=jdbc:h2:~/ApiDBThomasPereira
+spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-plataform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
